Product api changes
